[tool.poetry]
name = "reddit-pipeline"
version = "0.1.0"
description = ""
authors = ["Grzegorz Sajko <grzegorz.sajko@protonmail.com>"]
readme = "README.md"
packages = [{include = "reddit_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.6.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.228"
pytest = "^7.2.1"
ipykernel = "^6.20.2"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
